--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selim Rokbani Resume</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Selim Rokbani Resume</title>
+   <style>
+       body, html {
+           height: 100%;
+           margin: 0;
+       }
+       embed {
+           width: 100%;
+           height: 100%;
+       }
+   </style>
 </head>
 <body>
-    <embed src="Resume.pdf" type="application/pdf" width="100%" height="600px" />
+   <embed src="Resume.pdf" type="application/pdf" />
 </body>
 </html>
